syntax = "proto3";

package proto;

/*-
 * ‌
 * Hedera Network Services Protobuf
 * ​
 * Copyright (C) 2018 - 2022 Hedera Hashgraph, LLC
 * ​
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * ‍
 */

option java_package = "com.hedera.services.stream.proto";
// <<<pbj.java_package = "com.hedera.hapi.streams">>> This comment is special code for setting PBJ Compiler java package
option java_multiple_files = true;

import "basic_types.proto";

import "google/protobuf/wrappers.proto";


message ContractStateChanges {
  repeated ContractStateChange contract_state_changes = 1;
}

/**
 * The storage changes to a smart contract's storage as a side effect of the function call.
 */
message ContractStateChange {

  /**
   * The contract to which the storage changes apply to
   */
  ContractID contract_id = 1;

  /**
   * The list of storage changes.
   */
  repeated StorageChange storage_changes = 2;
}

/**
 * A storage slot change description.
 */
message StorageChange {
  /**
   * The storage slot changed.  Up to 32 bytes, big-endian, zero bytes left trimmed.
   */
  bytes slot = 1;

  /**
   * The value read from the storage slot.  Up to 32 bytes, big-endian, zero bytes left trimmed.
   *
   * Because of the way SSTORE operations are charged the slot is always read before being written to.
   */
  bytes value_read = 2;

  /**
   * The new value written to the slot.  Up to 32 bytes, big-endian, zero bytes left trimmed.
   *
   * If a value of zero is written the valueWritten will be present but the inner value will be absent.
   *
   * If a value was read and not written this value will not be present.
   */
  google.protobuf.BytesValue value_written = 3;
}